syntax = "proto3";

package auth;

service AuthService {
  rpc getToken (LoginRequest) returns (LoginResponse);
  rpc accessToken (AccessTokenRequest) returns (AccessTokenResponse);
  rpc logout (LogoutRequest) returns (LogoutResponse);
  rpc validateToken (ValidateTokenRequest) returns (ValidateTokenResponse); 
}

message LoginRequest {
  string email = 1;
  string deviceId=2;
  string role=3;
  string entityId=4;
}

message LoginResponse {
  string accessToken = 1;
  string refreshToken = 2;
}

message AccessTokenRequest {
 
  string refreshToken = 1;
}

message AccessTokenResponse {
  string accessToken = 1;
}

message LogoutRequest {
 string accessToken =1 ;
}

message LogoutResponse {
  bool success = 1;
}

message ValidateTokenRequest {
  string accessToken = 1;  
}

message ValidateTokenResponse {
  bool isValid = 1;         
  string entityId = 2;       
}


